fix: z-index nav-bar value

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -40,6 +40,7 @@ header {
     top: 0;
     width: 100%;
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, .1);
+    z-index: 1000;
 }
 
 .nav-white {
@@ -433,6 +434,10 @@ header {
     text-align: center;
     box-shadow: 0 5px 15px rgba(0,0,0,0.1);
     transition: transform 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-10px);
 }
 
 .card img {
